<resources>
    <string name="app_name">Films_OTUS</string>
    <string name="Details">Детали</string>
    <string name="IT">ОНО</string>
    <string name="IT2">ОНО 2</string>
    <string name="Avatar">Аватар</string>
    <string name="content_disc_poster_image">poster image</string>
    <string name="avatar_details">Аватар — американский научно-фантастический фильм 2009 года сценариста и режиссёра Джеймса Кэмерона с Сэмом Уортингтоном и Зои Салданой в главных ролях. Действие фильма происходит в 2154 году, когда человечество добывает ценный минерал анобтаниум на Пандоре, обитаемом спутнике газовой планеты в звёздной системе Альфы Центавра. По сюжету ресурсодобывающая корпорация угрожает существованию местного племени человекоподобных разумных существ — на’ви</string>
    <string name="it2_details">Оно 2 — американский сверхъестественный фильм ужасов 2019 года, продолжение фильма «Оно» 2017 года, основанные на одноимённом романе 1986 года Стивена Кинга.</string>
    <string name="it_details">Оно — американский фильм ужасов режиссёра Энди Мускетти, вышедший на экраны в 2017 году. Фильм основан на первой части одноимённого романа американского писателя Стивена Кинга, рассказывающей о семерых подростках, которых терроризирует Пеннивайз, существо, которое может принимать разные обличия и черпающее свою силу из страхов, ненависти и разочарования.</string>
    <string name="avatar">Аватар</string>
    <string name="invitebtn">Пригласить друга</string>
</resources>