<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotationX="0"
            android:rotationY="0"
            tools:layout_height="match_parent"
            tools:layout_width="match_parent">


            <ImageView
                android:id="@+id/poster1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/it_poster_icon" />

            <TextView
                android:id="@+id/film1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/IT"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/poster1"
                app:layout_constraintTop_toTopOf="@+id/poster1" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                android:background="@color/invis"
                android:text="@string/Details"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/poster1" />

            <ImageView
                android:id="@+id/poster2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/poster1"
                app:layout_constraintTop_toBottomOf="@+id/poster1"
                app:srcCompat="@drawable/it2_poster_icon" />

            <TextView
                android:id="@+id/film2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/IT2"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/film1"
                app:layout_constraintTop_toTopOf="@+id/poster2" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/invis"
                android:text="@string/Details"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/button"
                app:layout_constraintTop_toTopOf="@+id/film2" />

            <ImageView
                android:id="@+id/poster3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="@+id/poster2"
                app:layout_constraintTop_toBottomOf="@+id/poster2"
                app:srcCompat="@drawable/avatar_poster_icon" />

            <TextView
                android:id="@+id/film3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Avatar"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/film2"
                app:layout_constraintTop_toTopOf="@+id/poster3" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/invis"
                android:text="@string/Details"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/poster3" />

            <Button
                android:id="@+id/invite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/invitebtn"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/button3"
                app:layout_constraintHorizontal_bias="0.511"
                app:layout_constraintStart_toStartOf="@+id/poster3"
                app:layout_constraintTop_toBottomOf="@+id/poster3" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>